<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:text="@string/choose_language"/>
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioButtonBritish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/british_english" />


        <RadioButton
            android:id="@+id/radioButtonAmerican"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/american_english"/>




    </RadioGroup>

</LinearLayout>
