<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:cardCornerRadius="10dp"
                android:id="@+id/cvCard"
                app:layout_constraintEnd_toEndOf="parent"
                app:cardMaxElevation="10dp"
                app:cardElevation="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:scaleType="fitXY"
                    android:id="@+id/ivPoster"
                    />
            </androidx.cardview.widget.CardView>
            <Button
                android:id="@+id/btnSaveImage"
                android:layout_width="wrap_content"
                android:text="@string/saveimg"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTitle1"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="The Matrix"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:layout_toEndOf="@+id/tvTitle1"
                    app:layout_constraintStart_toStartOf="parent"
                    />
                <TextView
                    android:id="@+id/tvYear1"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:text="@string/year"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:layout_below="@+id/tvTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle"/>
                <TextView
                    android:id="@+id/tvYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="1999"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/tvYear1"
                    android:textSize="16sp"
                    android:layout_marginStart="10dp"
                    android:layout_below="@+id/tvTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle"/>
                <TextView
                    android:id="@+id/tvActor1"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:text="@string/actor"
                    android:layout_below="@+id/tvYear"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvYear"/>

                <TextView
                    android:id="@+id/tvActor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Actors"
                    android:layout_toEndOf="@+id/tvActor1"
                    android:layout_below="@+id/tvYear"
                    android:textSize="16sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvYear"/>
                <TextView
                    android:id="@+id/tvRunTime1"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:text="@string/run_time"
                    android:layout_below="@+id/tvActor"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvActor"/>
                <TextView
                    android:id="@+id/tvRunTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="139 min"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/tvRunTime1"
                    android:layout_below="@+id/tvActor"
                    android:textSize="16sp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvActor"/>
                <TextView
                    android:id="@+id/tvPlot1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plot"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/tvRunTime"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvRunTime"/>
                <TextView
                    android:id="@+id/tvPlot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Plot"
                    android:layout_below="@+id/tvPlot1"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvRunTime"/>
            </RelativeLayout>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/rating_list"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:id="@+id/rvList"
            app:layout_constraintTop_toBottomOf="@+id/tvPlot"/>
    </LinearLayout>

</ScrollView>
